# transmitwave

./: .gitignore  ACOUSTIC_RECORDING_GAPS.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_QUICKSTART.md  CLOUDFLARE_SETUP_COMPLETE.md  CSS_MODULATION.md  Cargo.toml  DEMO_README.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_SUMMARY.md  EXAMPLES.md  FEC_IMPLEMENTATION.md  FHSS_DOCUMENTATION.md  FOUNTAIN_MODE.md  FSK_RELIABILITY_IMPROVEMENT.md  FSK_SHORTENED_RS_OPTIMIZATION.md  GUARD_INTERVAL_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  MICROPHONE_FEATURE.md  QUICKSTART.md  README.md  READY_FOR_DEPLOYMENT.md  SERVER_INSTRUCTIONS.md  SPREAD_SPECTRUM.md  TECH_DEBT.md  TESTING_GUIDE.md  TRELLIS_CODING.md  WASM_BUILD_NOTES.md  WEB_DEMO_SUMMARY.md  create_test_wav.py  demo.html  demos.html  index-demos.html  index.html  microphone-demo.html  postamble-demo.html  recording-decode-demo.html  setup-cloudflare.sh  (+1 more)
.claude/: settings.local.json
.github/workflows/: deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_integration_test.rs
core/: Cargo.toml
core/src/: chunking.rs  css.rs  decoder.rs  decoder_chunked.rs  decoder_cp.rs  decoder_css.rs  decoder_dtmf.rs  decoder_fsk.rs  decoder_spread.rs  dtmf.rs  encoder.rs  encoder_chunked.rs  encoder_cp.rs  encoder_css.rs  encoder_dtmf.rs  encoder_fsk.rs  encoder_spread.rs  error.rs  fec.rs  fft_correlation.rs  fhss.rs  framing.rs  fsk.rs  lib.rs  ofdm.rs  ofdm_cp.rs  resample.rs  spread.rs  symbol_redundancy.rs  sync.rs  trellis.rs
core/tests/: integration_test.rs  sync_detection_tests.rs
tools/: Cargo.toml
tools/src/: main.rs
wasm/: Cargo.toml  build.sh  fix-env-import.sh
wasm/.claude/: settings.local.json
wasm/src/: lib.rs
web/: .gitignore  REACT_MIGRATION.md  README.md  VITE_WASM_INTEGRATION.md  cloud_build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wasm-env-shim.js
web/src/: App.tsx  main.ts  main.tsx
web/src/components/: Navigation.css  Navigation.tsx  Status.tsx
web/src/constants/: fountain.ts
web/src/hooks/: useDecoder.ts  useEncoder.ts
web/src/pages/: AmplePage.tsx  DTMFPage.tsx  DemoPage.tsx  FountainEncodePage.tsx  FountainListenPage.tsx  IndexPage.tsx  MicrophonePage.tsx  PostamblePage.tsx  PreamblePostambleRecordPage.tsx  RecordingDecodePage.tsx  (+8 more)
(+10 files in other folders)
