[package]
name = "testaudio-cli"
version = "0.1.0"
edition = "2021"
default-run = "testaudio"

[[bin]]
name = "testaudio"
path = "src/main.rs"

[dependencies]
testaudio-core = { path = "../core" }
hound = "3"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
