[package]
name = "transmitwave-cli"
version = "0.1.0"
edition = "2021"
default-run = "transmitwave"

[[bin]]
name = "transmitwave"
path = "src/main.rs"

[dependencies]
transmitwave-core = { path = "../core" }
hound = "3.5"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
