[package]
name = "transmitwave-core"
version = "0.1.0"
edition = "2021"

[dependencies]
fft-correlation = { git = "https://github.com/andrewtheguy/fft-correlation", tag = "0.1.0" }
reed-solomon-simd = "3.1"
thiserror = "2.0"
raptorq = "2"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
rand = "0.8"
rand_distr = "0.4"
