[package]
name = "transmitwave-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
transmitwave-core = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "OscillatorNode",
    "GainNode",
    "AnalyserNode",
] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization at cost of compile time
